--- a/스프링 입문을 위한 객체지향의 원리와 이해/03. 자바와 객체지향/추상화.md
+++ b/스프링 입문을 위한 객체지향의 원리와 이해/03. 자바와 객체지향/추상화.md
@@ -40,4 +40,36 @@
 어떻게 추상화를 하느냐는 정말 중요한 문제이다<br/>
 
 마무리로<br/>
-자바는 객체 지향에서 class 키워드를 통해 추상화를 지원한다.
+자바는 객체 지향에서 class 키워드를 통해 추상화를 지원한다.<br/><br/><br/>
+
+
+# 클래스 멤버 vs 객체 멤버 = static 멤버 vs 인스턴스 멤버
+> - 생물인 경우 "나이가 어떻게 되나요?"
+> - 무생물인 경우 "제조일자가 어떻게 되나요?"<br/>
+
+> - 미키마우스의 꼬리는 몇 개인가요?
+> - 제리의 꼬리는 몇 개인가요?
+> - 쥐의 꼬리는 몇 개인가요?<br/>
+
+모든 마우스의 객체가 같은 개수의 꼬리를 갖는다 <br/>
+이런 경우 마우스의 객체 수만큼 메모리를 잡아먹는 대신 한 곳에만 저장하는 것이 좋지않을까?<br/>
+같은 유형의 모든 객체가 같은 값을 가지고 있다면 그 값을 클래스에 저장하는 건 어떨까?<br/>
+어떻게?? static 을 이용해서!<br/><br/>
+> pulbic static int countOfTail = 1;
+
+<br/><br/>
+**static** 를 붙이느냐 안붙이느냐에 따라서 클래스 멤버, 객체 멤버로 구분이 된다<br/>
+클래스 멤버들은 static 키워드와 함께 사용되고 스태틱 영역에 상주하므로 정적 멤버라고도 한다<br/>
+객체 멤버들은 객체가 클래스의 인스턴스 이므로 인스턴스의 멤버라고도 한다.<br/><br/>
+
+정적 속성은 해당 클래스의 모든 객체가 같은 값을 가질 때 사용하는 것이 기본이다.<br/>
+정적 메서드는 객체들의 존재 여부에 관계 없이 사용할 수 있다.<br/>
+정적 멤버들은 객체가 아닌 클래스에 속해 있으며, 클래스는 JVM 구동시 메모리의 스태틱 영역에 바로 배치되기 때문에 객체의 존재 여부와 관계 없이 사용할 수 있다.<br/>
+
+* UML 표기법에서 정적 멤ㅁㅁ버에는 밑줄로 표시를 한다.<br/><br/>
+
+정적 속성의 경우 메모리 스태틱 영역에 클래스가 배치될 때 클래스 내부에 메모리 공간이 확보된다. 반면에 객체 속성은 속성명만 존재하고 실제 메모리 공간은 확보되지 않는다.<br/>
+객체 속성은 힙 영역에 객체가 생성되면 바로 그때 각 객체 안에 멤버 속성을 위한 메모리 공간이 할당된다.<br/><br/>
+
+
+
