--- a/스프링 입문을 위한 객체지향의 원리와 이해/06. 스프링이 사랑한 디자인 패턴/07. 전략 패턴.md
+++ b/스프링 입문을 위한 객체지향의 원리와 이해/06. 스프링이 사랑한 디자인 패턴/07. 전략 패턴.md
@@ -3,7 +3,92 @@
 - 전략 객체를 사용하는 컨텍스트(전략 객체의 사용자/ 소비자)
 - 전략 객체를 생성해 컨텍스트에 주입하는 클라이언트(제 3자, 전략 객체의 공급자)
 
-클라이언트는 다양한 전략 중 하나를 선택해 생성한 후 컨텍스트에 주입한다.
-</br>
-보급 장교가 무기를 군인에게 지급해주면 군인은 주어진 무기에 따라ㅏ 전투를 수행하게 된다.</br>
-무기는 전략이 되곡 군인은 컨텍스트, 보급장교는 제 3자가 된다
+> 클라이언트는 다양한 전략 중 하나를 선택해 생성한 후 컨텍스트에 주입한다.
+> 보급 장교가 무기를 군인에게 지급해주면 군인은 주어진 무기에 따라ㅏ 전투를 수행하게 된다.</br>
+> 무기는 전략이 되곡 군인은 컨텍스트, 보급장교는 제 3자가 된다
+
+
+**Strategy.java**
+```
+public interface Strategy {
+  public abstract void runStrategy();
+}
+```
+<br/>
+
+**StrategyGun.java**
+```
+public class StrategyGun implements Strategy {
+  @Override
+  public void runStrategy() {
+    System.out.println("탕, 탕탕, 타다당");
+  }
+}
+```
+<br>
+
+**StrategySword.java**
+```
+public class StrategySword implemenets Strategy {
+  @Override
+  public void runStrategy() {
+    System.out.println("챙, 채챙, 챙챙챙");
+  }
+}
+```
+<br>
+
+**StrategyBow.java**
+```
+public class StrategyBow implemenets Strategy {
+  @Override
+  public void runStrategy() {
+    System.out.println("피융, 핑, 퓨슝");
+  }
+}
+```
+<br/>
+
+**전략을 사용하는 컨텍스트 Soldier.java**
+```
+public class Solider {
+  voic runContext(Strategy strategy) {
+    System.out.println("전투 시작");
+    strategy.runStrategy();
+    System.out.println("전투 종료"):
+  }
+}
+```
+<br/>
+
+무기(전략)를 조달(생성)해서 군인(컨텍스트)에게 지급(주입)해 줄 보급장료(클라이언트)<br/>
+**전략 패턴의 클라이언트 Client.java**
+```
+public class Client {
+  public static void main(String[] args) {
+    Strategy strategy = null;
+    Soldier rambo = new Soldier();
+
+    // 총을 람보에게 전달해서 전투를 수행하게 한다
+    strategy = new StrategyGun();
+    rambo.runcontext(strategy);
+
+    System.out.println();
+
+    // 검을 람보에게 전달해서 전투를 수행하게 한다
+    strategy = new StrategySword();
+    rambo.runcontext(strategy);
+
+    System.out.println();
+    
+    // 활을 람보에게 전달해서 전투를 수행하게 한다
+    strategy = new StrategyBow();
+    rambo.runcontext(strategy);
+
+    System.out.println();
+  }
+}
+```
+
+> 클라이언트가 전략을 생성해 전략을 실행할 컨텍스트에 주입하는 패턴
+> 개방 폐쇄 원칙과 의존 역전 원칙이 적용됨
