Update 5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md

--- a/이펙티브 자바/5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md
+++ b/이펙티브 자바/5. 자원을 직접 명시하지 말고 의존 객체 주입을 사용하라.md
@@ -38,9 +38,11 @@ public class SpellChecker {
 	}
 }
 ```
-위의 두 방식 모두 유연하지 않고 테스트가 어렵다  
+정적 메서드는 **객체의 상태를 저장하거나 자원을 주입받을 수 없기 때문에,** 자원에 따라 동작을 변경하는 것이 불가능하다.
 
-사용하는 자원에 따라 동작이 달라지는 클래스에는 정적 유틸리티 클래스나 싱글턴 방식이 적합하지 않다.
+싱글턴 인스턴스는 **프로그램 실행 동안 한 번만 생성**되므로, 생성 후에는 자원 변경이 어렵다. 만약 동작에 따라 자원이 변경되어야 한다면, 싱글턴 인스턴스를 다시 생성하거나 대체하기 어렵다.
+
+위의 두 방식 모두 유연하지 않고 테스트가 어렵고, 사용하는 자원에 따라 동작이 달라지는 클래스에는 정적 유틸리티 클래스나 싱글턴 방식이 적합하지 않다.
 즉, 의존성을 분리하여 외부로부터 주입받아야 한다. (의존 객체 주입 패턴)
 
 
