--- a/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
+++ b/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
@@ -79,42 +79,143 @@
 
 
 
+
+
+
+
+
+
+<br><br><br>
+
 ## 용량 제한
+시스템을 여러 가지 용도로 사용하는 경우
+특정 용도가 파일 시스템의 용량을 무제한으로 사용할 수 있다면, 다른 용도로 사용할 용량이 부족해진다.
+<img width="1012" alt="스크린샷 2024-09-14 오전 2 00 11" src="https://github.com/user-attachments/assets/0df810b1-4143-4b14-a6fd-815a76448953">
+
+#### 쿼터의 종류
+- 사용자 쿼터 : 사용자별로 용량 제한, (ext4, XFS)
+- 디렉터리 쿼터 : 프로젝트 쿼터라고도 하며, 특정 디렉터리별로 용량을 제한, (ext4, XFS)
+- 서브 볼륨 쿼터 : 파일 시스템 내의 서브 볼륨이라는 단위별 용량 제한,(Btrfs)
 
 
+
+
+
+
+
+
+<br><br><br>
 
 ## 파일 시스템이 깨진 경우
+파일시스템의 데이터를 스토리지로 쓰는 중에 시스템의 전원이 강제로 끊어지는 경우 파일 시스템의 내용이 깨질 수 있다.  
 
+디렉터리의 이동을 예로 보자.
+<img width="976" alt="스크린샷 2024-09-14 오전 2 27 57" src="https://github.com/user-attachments/assets/cb1dc16e-580d-4111-b8af-b28476e8d9ee">
+
+
+<br>
+
+
+### 이동 처리의 흐름을 보자
+<img width="970" alt="스크린샷 2024-09-14 오전 2 27 50" src="https://github.com/user-attachments/assets/e1d24169-b549-4a6c-ad59-79306a050bb2">
+
+
+<br>
+
+
+### 파일시스템이 깨진 경우
+<img width="981" alt="스크린샷 2024-09-14 오전 2 27 39" src="https://github.com/user-attachments/assets/cb38b50b-82dc-4e19-9ca6-33973377931e">
+
+파일시스템이 깨지는 것을 막기 위해서는 **저널링과 Copy on Write** 방식이 있다.
+- 저널링 : ext4, XFS
+- Copy on Write : Btrfs
+
+
+<br><br><br>
 
 ## 저널링
+저널링에서는 파일시스템 안에 저널 영역이라는 특수한 영역이 있다.
+저널 영역은 사용자가 인식할 수 없는 메타데이터이다.  
+
+
+#### 파일 시스템을 업데이터하는 순서
+1. 업데이트에 필요한 아토믹한 처리의 목록을 저널 영역에 작성한다. 이 목록을 저널 로그라고 한다.
+2. 저널 영역의 내용을 바탕으로 파일 시스템의 내용을 업데이트한다.
+
+<img width="989" alt="스크린샷 2024-09-14 오전 2 50 41" src="https://github.com/user-attachments/assets/0debda14-345d-45cc-9539-43c171d92ad5">
+
+<br>
+
+#### 순서 2에서 전원이 끊어진다면?
+<img width="1009" alt="스크린샷 2024-09-14 오전 2 55 05" src="https://github.com/user-attachments/assets/8cb87a72-dac9-4c63-822a-4ecc102723f5">
+단순히 저널 영역의 데이터를 지워버린다. 따라서 실제 데이터는 처리 전과 같아진다.
+
+<br>
+#### 하지만 실제로 데이터를 업데이트하는 중에 강제로 전원이 끊어진다면?
+저널로그를 처음부터 다시 수행한다.
+
+
+<br><br><br>
 
 ## Copy on Write
 
-## 파일 시스템 깨짐
 
+<br><br><br>
+
+## 파일 시스템 깨지는 것을 막을 수 없는 경우
+
+
+<br><br><br>
 
 ## 대책
 
 
+
+<br><br><br>
+
 ## 파일 종류
+
+
+<br><br><br>
 
 ## 캐릭터 장치
 
 
+<br><br><br>
+
 ## 블록 장치
 
+
+
+
+<br><br><br>
 
 ## 여러가지 파일시스템
 
 
+
+
+<br><br><br>
+
 #### 메모리 기반
 
+
+<br><br><br>
+
 #### 네트워크 파일시스템
+
+
+
+<br><br><br>
 
 #### 가상 파일시스템
 - procfs
 - sysfs
 - cgroupfs
+
+
+<br><br><br>
+
 #### Btrfs
 - 멀티볼륨
 - 스냅샷
