Update 8. 저장 장치.md

--- a/실습과 그림으로 배우는 리눅스 구조/8. 저장 장치.md
+++ b/실습과 그림으로 배우는 리눅스 구조/8. 저장 장치.md
@@ -1,4 +1,28 @@
-## HDD의 데이터 읽기 쓰기의 동작 방식
+## HDD의 동작 방식
+- 데이터를 자기 정보로 변환하여 자기 장치(platter)에 기록하는 저장장치
+- 섹터 단위 사용
+- 1섹터 = 512 바이트, 4K바이트
+- 실제로는 원의 바깥쪽의 동심원이 안쪽의 동심원 보다 섹터의 수가 많다.
+- 각 섹터 데이터는 자기 헤드라는 부품에 의해 읽고 쓴다.
+- 스윙 암을 움직여 자기 헤드를 플래터의 동심원 반경 방향으로 이동
+<img width="995" alt="스크린샷 2024-09-15 오후 2 11 51" src="https://github.com/user-attachments/assets/bcfeb3f0-1d2c-412c-bfc7-be49de1fce8d">
+
+
+
+### HDD 전송 흐름
+1. 디바이스 드라이버가 데이터의 읽고 쓰기에 필요한 정보를 HDD에 전달 (섹터 번호, 섹터의 개수, 섹터의 종류(읽기, 쓰기)
+2. 스윙 암 이동, 플래터 회전시켜 접근하고자 하는 섹터 위로 자기 헤드 이동 (자기 헤드는 스윙 암에 달려 있다.)
+3. 데이터 읽고 씀
+4. 읽고나서 HDD의 읽기 처리 완료
+<img width="1002" alt="스크린샷 2024-09-15 오후 2 11 39" src="https://github.com/user-attachments/assets/afa82e81-037d-4925-8bad-cb0d26942162">
+
+- 위의 흐름 중 1, 4는 고속의 전기적 처리이다.
+- 스윙 암, 플래터의 회전은 느린 기계적 처리이다.
+- HDD에 접근하는 레이턴시는 하드웨어의 처리 속도의 영향을 받는다.
+
+- 전기적 처리만으로 읽고 쓸 수 있는 메모리 접근에 비해 레이턴시가 훨씬 커진다. 따라서 레이턴시 중 대부분이 기계 처리에 걸리는 시간이다.
+<img width="998" alt="스크린샷 2024-09-15 오후 2 19 15" src="https://github.com/user-attachments/assets/e9dc4040-ecb7-4fa7-9682-13f9327857a4">
+
 
 
 
@@ -6,48 +30,41 @@
 <br><br><br>
 
 ## HDD의 성능 특성
+연속하는 여러 개의 섹터 데이터를 한 번의 접근 요청으로 읽을 수 있다.
+<img width="1016" alt="스크린샷 2024-09-15 오후 2 30 45" src="https://github.com/user-attachments/assets/456411dc-4015-4dd1-a1be-cdbd824d22f1">
+
+우선, 스윙 암을 동작해서 자기 헤드의 위치를 원하는 동심원의 위치에 맞춘다. 그 후 플래터를 회전시켜 여러 개의 연속된 섹터의 데이터를 한 번에 읽는다.
+한 번에 읽을 수 있는 데이터의 양은 HDD마다 다르다.    
+
+파일시스템은 각 파일의 데이터를 연속된 영역에 배치한다.
+
+<img width="1004" alt="스크린샷 2024-09-15 오후 2 36 56" src="https://github.com/user-attachments/assets/f60a5163-6fe9-4f98-a70e-db32075af076">
+여러 개의 섹터가 연속적으로 있어도 각각의 섹터를 여러 번 나눠서 접근하는 경우 불필요한 시간이 소요된다.  
+
+
+<img width="998" alt="스크린샷 2024-09-15 오후 2 42 55" src="https://github.com/user-attachments/assets/f4a75764-f544-4979-b8e9-5585641efc50">
+
+### 접근 소요 시간
+<img width="1019" alt="스크린샷 2024-09-15 오후 2 49 09" src="https://github.com/user-attachments/assets/9a9f251f-324f-4c6d-9f7f-c16f9784ff23">
 
 
 
 
-
-<br><br><br>
-
-## HDD의 테스트
-
-
-
-
-
-<br><br><br>
-
-## 테스트 프로그램
-
-
-
-
-
-<br><br><br>
-
-## 시퀀셜 접근
-
-
-
-
-
-
-<br><br><br>
-
-## 랜덤 접근
-
-
-
+### 주의할 점
+- 파일 내의 데이터를 연속적으로 가까운 영역에 배치한다.
+- 연속된 영역에 접근할 때에는 여러 번 나누기보다는 한 번에 해야 한다.
+- 파일은 큰 사이즈로 Sequential하게 접근해야 한다.
+  
 
 
 <br><br><br>
 
 ## 블록 장치 계층
+리눅스에서는 HDD, SDD 등의 랜덤 접근이 가능하며 일정 단위(섹터)로 접근 가능한 장치를 블록 장치라고 한다.  
 
+특수 파일(디바이스 파일)을 이용해 직접 접근하거나, 파일시스템을 통해 간접적으로 접근한다. 대부분의 소프트웨어는 간접적으로 접근한다.
+커널의 블록 장치 계층에서 담당한다.
+<img width="1015" alt="스크린샷 2024-09-15 오후 2 59 40" src="https://github.com/user-attachments/assets/f39d27d8-0979-42cb-8887-6b5cd4f8a167">
 
 
 
@@ -55,7 +72,10 @@
 <br><br><br>
 
 ## I/O 스케줄러
-
+블록 장치에 접근하려는 요청을 일정 기간 모은 뒤, 가공(merge/ sort) 후 디바이스에 I/O 요청을 함으로써 I/O 성능을 향상 시킨다.
+- **merge** : 여러 개의 연속된 섹터에 대한 I/O 요청을 하나로 모은다.
+- **sort** : 여러 개의 불연속적인 섹터에 대한 I/O 요청을 섹터 번호 순서대로 정리한다.
+<img width="993" alt="스크린샷 2024-09-15 오후 3 19 54" src="https://github.com/user-attachments/assets/c9568952-8990-45c8-9afb-48f4730a5400">
 
 
 
@@ -63,26 +83,30 @@
 <br><br><br>
 
 ## 미리 읽기
+프로그램으로부터 데이터에 접근할 때 공간적 국소성이라는 특징이 있다.  
+이 특징을 이용하기 위해 블록 장치 계층의 **미리 읽기**라는 기능을 사용할 수 있다.
+
+- 미리 읽기 : 저장 장치 안의 영역에 접근 후, 바로 연속되는 영역에 접근할 가능성이 크다는 것을 예측하여 미리 읽어두는 기능
+<img width="951" alt="스크린샷 2024-09-15 오후 3 27 15" src="https://github.com/user-attachments/assets/700dc5e0-a220-446e-9d0f-8bc3909cf33c">
+
+<img width="1013" alt="스크린샷 2024-09-15 오후 3 29 44" src="https://github.com/user-attachments/assets/ad59328a-3812-40f3-af05-ac9cc8a784b4">
 
 
 
 
 
-<br><br><br>
+직후, 미리 읽어 둔 영역이 예측대로 접근하면 이미 데이터 읽기가 되어있기 때문에 읽기를 생략할 수 있다. 이로 인해 시퀀셜 접근의 경우 성능을 높일 수 있다.  
+예측대로 접근하지 않은 경우 읽었던 데이터를 버린다.
 
-## 테스트
-
-
-#### 시퀀셜 접근
-
-
-#### 랜덤 접근
 
 
 <br><br><br>
 
 ## SSD의 동작 방식
+- 데이터의 접근이 전기적 동작만으로 이루어진다.
+- 랜덤 접근 성능이 HDD보다 빠르다.
+- HDD보다 훨씬 비싸다.
+<img width="1013" alt="스크린샷 2024-09-15 오후 3 37 47" src="https://github.com/user-attachments/assets/9d2abc75-e2bd-4cbb-a649-3d7fdf962054">
 
-#### SSD의 테스트
 
 
