--- a/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
+++ b/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
@@ -151,6 +151,7 @@
 단순히 저널 영역의 데이터를 지워버린다. 따라서 실제 데이터는 처리 전과 같아진다.
 
 <br>
+
 #### 하지만 실제로 데이터를 업데이트하는 중에 강제로 전원이 끊어진다면?
 저널로그를 처음부터 다시 수행한다.
 
@@ -174,16 +175,55 @@
 <br><br><br>
 
 ## 파일 종류
+- 일반 파일 : 사용자 데이터를 보관
+- 디렉터리 : 파일을 보관
+- 디바이스 파일 :
+
+  리눅스에서는 스스로 동작하는 하드웨어 상의 장치를 파일로 표현한다. 그래서 리눅스에서는 장치를 파일과 동등하게 open(), read(), write()등의 시스템 콜을 사용한다.
+  장치 고유의 복잡한 조작에는 ioctl()시스템 콜을 사용한다.
+
+  root만 디바이스 파일에 접근이 가능하다.
+
+
+캐릭터 장치와 블록 장치가 있다.
+각 디바이스 파일은 /dev 아ㅏ래에 존재한다. 디바이스 파일의 메타뎅터에 보관되어 있는 정보에 따라 각각의 장치를 식별한다.
+
+- 파일의 종류 (캐릭터 장치, 블록 장치)
+- 장치의 Major number
+- 장치의 Minor number
 
 
 <br><br><br>
 
 ## 캐릭터 장치
+읽기와 쓰기는 가능하나 탐색 불가
+- 터미널 : bash등의 셸을 통해 명령어를 실행하기 위해 문자열만으로 이루어진 흑백 화면 혹은 윈도우
+  - write() 시스템 콜 : 터미널에 데이터 출력
+  - read() 시스템 콜 : 터미널에 데이터 입력
+- 키보드
+- 마우스
+
 
 
 <br><br><br>
 
 ## 블록 장치
+- 블록의 읽기, 쓰기, 랜덤 접근 가능
+- HDD, SDD 등의 저장 장치
+- 블록 장치에 데이터를 읽고 쓴다.
+- 스토리지의 특정 장소에 있ㅅ는 데이터에 접근 가능
+- 일반적으로 직접 접근하지 않고, 파일시스템을 작성하여 마운트함으로써 파일시스템을 경유해서 사용
+
+
+### 블록장치를 직접 다루는 경우
+- 파티션 테이블의 업데이트(parted)
+- 블록 장치 레벨의 데이터 백업 & 복구(dd)
+- 파일시스템의 작성(mkfs)
+- 파일시스템의 마운트(mount)
+- fsck
+
+
+
 
 
 
@@ -197,31 +237,131 @@
 
 <br><br><br>
 
-#### 메모리 기반
+### 메모리 기반
+#### tmpfs
+- 저장 장치 대신 메모리에 작성하는 파일시스템
+- 전원 종료시 데이터가 사라지지만 저장 장치의 접근이 전혀 발생하지 않음
+- 고속
+<img width="995" alt="스크린샷 2024-09-15 오후 4 29 11" src="https://github.com/user-attachments/assets/9f9b1291-b53f-4261-ad71-b5145982c747">
 
 
 <br><br><br>
 
-#### 네트워크 파일시스템
+### 네트워크 파일시스템
+지금까지의 파일시스템은 로컬 시스템에 있는 데이터  
+네트워크 파일시스템은 네트워크를 통해 연결된 원격 호스트에 있는 파일에 접근한다.  
+<img width="1016" alt="스크린샷 2024-09-15 오후 4 34 50" src="https://github.com/user-attachments/assets/0046dff7-fcf3-4b56-89c6-1c1cd5fbe617">
+
+- cifs : windows 호스트상의 파일에 접근
+- nfs : UNIX 계열의 OS를 사용하는 호스트 상의 파일에 접근
 
 
 
 <br><br><br>
 
-#### 가상 파일시스템
-- procfs
-- sysfs
-- cgroupfs
+### 가상 파일시스템
+####procfs : 시스템에 존재하는 프로세스에 대한 정보를 얻기 위한 파일시스템
+
+#### sysfs
+- procfs가 도입된 후 시간이 지남에 따라 커널의 프로세스 정보 외 여러 정보가 제한 없이 들어감. procfs를 마구잡이로 사용하는 것을 막기 위해, 이러한 정보를 배치하는 장소를 정하기 위해 만든 파일시스템
+- /sys이하에 마운트
+- /sys/devices : 시스템에 탑재된 디바이스에 대한 정보
+- /sys/fs 이하의 파일 : 시스템에 존재하는 각종 파일시스템에 대한 정보
+
+#### cgroupfs
+- 하나의 프로세스 혹은 여러 개의 프로세스로 만들어진 그룹에 대해 여러 리소스 사용량의 제한을 가하는 cgroup기능을 갖는다.
+- root만 cgroup 기능 사용 가능
+- /sys/fs/cgroup 이하에 마운트
 
 
 <br><br><br>
 
-#### Btrfs
-- 멀티볼륨
-- 스냅샷
-- RAID
-- 데이터의 파손 검출, 복구
+### Btrfs
+
+<br>
+
+#### 멀티볼륨
+<img width="1013" alt="스크린샷 2024-09-15 오후 4 41 16" src="https://github.com/user-attachments/assets/05f29093-0a06-4321-b7d5-bdd94e6a9c3e">
+
+<img width="1005" alt="스크린샷 2024-09-15 오후 4 50 19" src="https://github.com/user-attachments/assets/12f5ccd6-fb92-40a0-8297-fe4e0aae4f4a">
+
+여러 개의 저장 장치/파티션으로부터 거대한 스토리지 풀을 만들고 그 안에 마운트 가능한 서브 볼륨 영역을 작성
+- 스토리지 풀 = LVM으로 구현된 볼륨 그룹
+- 서브 볼륨 = LVM으로 구현된 논리 볼륨 + 파일시스템
+- 파일시스템 + LVM
 
 
+<br>
+
+
+#### 스냅샷
+
+#### 일반 복사
+<img width="1017" alt="스크린샷 2024-09-15 오후 4 58 53" src="https://github.com/user-attachments/assets/e05960f2-ac79-4cb3-bc89-00f10cd273e9">
+
+#### 스냅샷
+<img width="1022" alt="스크린샷 2024-09-15 오후 5 05 21" src="https://github.com/user-attachments/assets/7cb5b0cd-7dce-46ec-a93d-ec4ef2573a45">
+
+서브 볼륨 단위로 스냅샷 생성 가능
+- 데이터를 참조하는 메타데이터 작성, 스냅샷 내 더티 페이지의 라이트백 -> 일반적인 복사보다 빠르다
+- 원래의 서브 볼륨과 스냅샷은 데이터를 공유하기때문에 공간낭비가 적다
+
+공산상 비용의 차이
+
+
+
+이 경우 트리의 root 노드만을 새로 만들어 다음 레벨의 노드를 링크건다.
+즉, 데이터의 복사가 발생하지 않기때문에 훨씬 고속이다.
+
+
+<br>
+
+
+#### RAID
+파일시스템 레벨에 RAID 작성을 포함한다.  
+RAID 0, 1, 10, 5, 6, dup(이중화)  
+- 어느 레벨로 설정되는지의 단위는 서브볼륨이 아닌 Btrfs 파일시스템 전체
+
+
+
+<br>
+
+
+#### RAID가 없는 경우 sda가 망가지는 경우
+<img width="999" alt="스크린샷 2024-09-15 오후 5 11 50" src="https://github.com/user-attachments/assets/13a434bc-75e6-47ec-83f8-6d3717b74e9b">
+
+
+
+<br>
+
+
+#### RAID 1 구성인 경우 sda가 망가지는 경우
+<img width="981" alt="스크린샷 2024-09-15 오후 5 22 08" src="https://github.com/user-attachments/assets/4bb446e3-e4ef-41f3-9403-73b2ee028c59">
+
+모든 데이터는 2개의 스토리(sda, sdb)에 저장되기 때문에 sda가 망가지더라도 A의 데이터는 sdb에 남아 있다.
+
+
+<br>
+
+#### 데이터의 파손 검출, 복구
+
+스토리지 내의 일부 데이터가 파괴된 경우 RAID 구성을 이용해 복구가 가능하다.  
+
+<img width="1018" alt="스크린샷 2024-09-16 오전 12 04 07" src="https://github.com/user-attachments/assets/f8b6098e-ebbc-4787-8088-00048fe2b861">
+- 데이터가 깨진 것을 검출하지 못하면 모른 채로 운영을 계속하게 되는 리스크가 있다.
+- Brtfs의 경우 데이터, 메타데이터 모두 일정 데이터 크기마다 체크섬을 가지고 있으므로 데이터의 파손을 검출할 수 있다.
+
+<br>
+
+<img width="989" alt="스크린샷 2024-09-16 오전 12 04 56" src="https://github.com/user-attachments/assets/b12af234-dbb6-4d55-b141-686b26886126">
+
+- 데이터를 읽는 도중 체크섬 에러를 검출하게 되면 해당 데이터를 버리고 읽기를 요청한 프로그램에 I/O 에러를 알린다.
+- RAID 1, 10, 5, 6,dup 구성인 경우 다른 체크섬이 일치하는 정확한 데이터를 기준으로 데이터를 복구한다.
+- RAID 5, 6 경우 패리티 사용
+
+
+
+
+RAID 1의 경우 읽기를 요청한 곳은 데이터가 일시적으로 깨졌음을 인식하지 못하고 지나간다.
 
 
