--- a/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
+++ b/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
@@ -159,17 +159,48 @@
 <br><br><br>
 
 ## Copy on Write
+파일시스템이 깨지는 것 방지  
 
+예전부터 있던 파일시스템은 일단 파일을 작성하면 그 파일의 배치 장소는 바뀌지 않는다. 
+파일의 내용을 업데이트할 때마다 저장 장치상의 같은 장소에 새로운 데이터를 넣는다.
+<img width="1020" alt="스크린샷 2024-09-14 오전 3 12 30" src="https://github.com/user-attachments/assets/f99efe6e-54f9-4c3d-93a5-305a2ada4a49">
+
+
+<br>
+
+Btrfs 등의 Copy on Write 형의 파일시스템은 파일을 작성하더라도 업데이트할 때와 다른 장소에 데이터를 기록한다.  
+<img width="1024" alt="스크린샷 2024-09-16 오전 12 12 34" src="https://github.com/user-attachments/assets/173b53fb-ae2a-4a8a-af60-49a7f8e08d49">
+
+<br>
+
+<img width="1011" alt="스크린샷 2024-09-16 오전 12 13 46" src="https://github.com/user-attachments/assets/62cb1735-211c-4204-bbef-0da567a5d2e2">
+업데이트되는 데이트를 다른 장소에 전부 쓴 뒤 링크를 고치는 방식으로 동작한다.
+
+
+<br>
+<img width="986" alt="스크린샷 2024-09-16 오전 12 19 52" src="https://github.com/user-attachments/assets/683acbb4-a093-4221-a9d3-e1bf077d9580">
+
+위와 같이 강제 전원 단절이 발생해도 재부팅 후에 작성된 데이터를 삭제하면 문제가 없다.
 
 <br><br><br>
 
-## 파일 시스템 깨지는 것을 막을 수 없는 경우
-
-
-<br><br><br>
 
 ## 대책
+마지막에 백업한 시점의 상태로 복원  
 
+복구용 명령어
+- fsck
+
+**단점**
+- 파일시스템 전체를 조사하기 때문에 소요 시간이 파일시스템 사용량에 따라 증가한다. (수테라바이트 ~ 수일 단위)
+- 복구에 오랜 시간을 들여도 실패할 수 있다.
+- 사용자가 원하는대로 상태를 복원한다고 보장할 수 없다.
+- 처리하면서 깨진 데이터는 내용과 관계없이 삭제한다.
+
+<br>
+
+#### fsck의 동작
+<img width="986" alt="스크린샷 2024-09-16 오전 12 19 52" src="https://github.com/user-attachments/assets/b2236c0d-9bde-4704-a356-c5a502eec639">
 
 
 <br><br><br>
