Update 4. 프로세스 스케줄러.md

--- a/실습과 그림으로 배우는 리눅스 구조/4. 프로세스 스케줄러.md
+++ b/실습과 그림으로 배우는 리눅스 구조/4. 프로세스 스케줄러.md
@@ -37,6 +37,124 @@
 
 
 
+# 고찰
+
+<br><br><br>
+
+# 컨텍스트 스위치
+
+
+
+
+<br><br><br>
+
+# 프로세스의 상태
+
+
+
+
+<br><br><br>
+
+# 상태 변환
+
+
+
+
+
+<br><br><br>
+
+# idle 상태
+
+
+
+<br><br><br>
+
+# 여러 가지 상태 변환
+
+
+
+<br><br><br>
+
+# 스루풋과 레이턴시
+
+
+
+<br><br><br>
+
+# 실제 시스템
+
+
+
+
+
+<br><br><br>
+
+# 논리 CPU가 여러 개일때 스케줄링
+
+
+
+
+<br><br><br>
+
+# 실험 방법
+
+
+
+
+
+<br><br><br>
+
+# 두 번째 실험
+
+
+
+## 프로세스 1개
+## 프로세스 2개
+## 프로세슷 3개
+
+
+
+<br><br><br>
+
+# 스루풋과 레이턴시
+
+
+# 고찰
+
+
+
+<br><br><br>
+
+# 경과 시간과 사용 시간
+
+
+
+
+
+<br><br><br>
+
+# 슬립을 사용하는 프로세스
+
+
+
+
+
+<br><br><br>
+
+# 실제 프로세스
+
+
+
+
+<br><br><br>
+
+# 우선순위 변경
+
+
+
+
+
+
 
 
 
