--- a/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
+++ b/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
@@ -1,20 +1,28 @@
-리눅스에서는 저장 장치 안에 있는 데이터에 접근할 때 파일 시스템을 통해서 접근한다.  
+리눅스에서는 커널은 저장 장치 안에 있는 데이터에 접근할 때 직접 저장 장치에 접근하는 대신, **파일 시스템을 통해서 접근**한다.  
 
 
 ## 저장 장치의 기능
-- 저장 장치 안에 지정된 주소에 대해 특정 사이즈의 데이터를 읽고 쓰는 기능
+특정 주소에 대해 지정된 크기의 데이터를 읽고 쓰는 방식으로 동작하며, 데이터를 영구적으로 보관하고 필요할 때 읽거나 저장한다.
+
+
 ![저장장치의기능.png](https://github.com/user-attachments/assets/bffcc19d-42d0-4521-9412-48e6a586dbbd)
 - 100 기가바이트의 스토리지가 있다.
 - 10 기가바이트의 메모리 영역을 주소 50기가바이트 지점에 쓴다
 
 ![저장장치의기능.png](https://github.com/user-attachments/assets/a63a3f97-b2c7-42b2-b6a5-dafa4dc05c8b)
-- 데이터를 읽어와야 할 경우 데이터를 보관한 주소, 사이즈를 스스로 기억해야 한다.
-- 모든 데이터에 대해 주소, 사이즈를 관리해야 한다.
+- 파일시스템 없이 데이터를 읽어오는 경우, 데이터를 보관한 주소, 사이즈를 스스로 기억해야 한다.
+- 따라서, 모든 데이터에 대해 주소, 사이즈를 관리해야 한다.
 
 <br>
-이런 것을 관리하는 방법이 파일 시스템이다
-하나의 데이터의 이름, 위치, 사이즈 등의 부가 정보를 추가하여 파일 단위로 관리한다.
-따라서 데이터(파일)의 이름을 알면 저장장치에서의 데이터 위치, 사이즈 등의 정보를 기억할 필요가 없다.
+파일 시스템이 없으면 데이터를 찾거나 관리하는 것이 매우 어려워지며, 모든 파일과 데이터의 물리적 위치를 수동으로 관리해야 한다.
+
+
+<br>
+이런 것을 관리하는 방법이 파일 시스템이다  
+데이터의 이름, 위치, 사이즈 등의 부가 정보를 파일 단위로 관리한다.
+따라서 데이터(파일)의 이름을 알면 저장 장치에서의 데이터 위치, 사이즈 등의 정보를 기억할 필요가 없다.
+
+파일 시스템이 있는 경우, 파일 이름이나 경로를 통해 데이터에 쉽게 접근할 수 있게 됩니다.
 
 <br><br>
 
