--- a/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
+++ b/실습과 그림으로 배우는 리눅스 구조/7. 파일시스템.md
@@ -56,15 +56,37 @@
 |lseek()	|파일의 특정 위치로 이동|
 |ioctl()|	파일시스템에 의존적인 특수한 처리|
 
+<br><br><br><br>
 
-1. 커널 내의 모든 파일시스템 공통 처리가 동작하고 대상 파일의 파일시스템을 판별한다.
-2. 각 파일시스템을 처리하는 프로세스를 호출하여 시스템 콜에 대응되는 처리를 한다.
-3. 데이터의 읽기를 하는 경우 디바이스 드라이어에 처리를 의뢰한다.
-4. 디바이스 드라이버가 데이터를 읽어 들인다.
 
 <img width="787" alt="스크린샷 2024-09-14 오전 1 29 37" src="https://github.com/user-attachments/assets/e826334b-ad81-4396-bddc-df9fc82dc8cf">
 
 파일 시스템에 관계없이 통일된 인터페이스로 접근이 가능하다.
+<br><br>
+
+1. **프로세스 요청** : 프로세스가 파일을 읽기 위해 입출력 시스템 콜을 호출한다.
+2. **파일시스템 공통 처리** : 시스템 콜을 통해 운영체제 커널로 전달된 요청은 파일시스템 계층에서 처리된다.
+   - 파일시스템 공통 계층은 사용 중인 파일시스템에 따라 적절한 처리 단계를 호출한다.
+   - 다양한 파일시스템을 지원하기 위한 공통 인터페이스이다.
+3. **파일시스템 특화 처리** : 특정 파일시스템에 맞는 작업을 수행한다.
+4. **디바이스 드라이버** : 파일시스템 처리 후, 실제 물리 저장 장치에 접근하기 위해 디바이스 드라이버 계청으로 요청을 전달한다.
+   - 디바이스 드라이버는 운영체제와 하드웨어 사이에서 중재자 역할을 하며, 저장 장치의 데이터를 읽고 쓴다.
+5. **저장 장치** : 디바이스 드라이버는 저장 장치의 특정 블록에 데이터를 읽거나 쓰도록 명령을 주고, 저장 장치는 그에 따라 데이터를 처리한다.
+
+저장 장치에서 데이터를 읽은 후 디바이스 드라이버 -> 파일시스템 -> 프로세스로 데이터를 전달하는 역방향 처리가 이루어진다.
+
+
+<br>
+
+
+**파일시스템 공통 처리 단계**에서는 여러 파일시스템을 지원하기 위해 운영체제에서 공통적으로 처리해야 하는 작업을 다룬다.
+- 파일 경로 파싱
+- 파일 핸들링
+- 파일 권한 검사
+- 캐시 처리
+- 입출력 요청 처리
+- 동기화와 락 관리
+
 
 
 
