Update 1. 컴퓨터 시스템의 개요.md

--- a/실습과 그림으로 배우는 리눅스 구조/1. 컴퓨터 시스템의 개요.md
+++ b/실습과 그림으로 배우는 리눅스 구조/1. 컴퓨터 시스템의 개요.md
@@ -1,4 +1,7 @@
-OS 와 하드웨어으니 관계, 그리고 OS란 어떤 것일까?
+운영체제란? 운영체제와 하드웨어의 관계?
+
+
+<br>
 
 ## 컴퓨터 시스템이 동작할 때 하드웨어의 동작
 ![process.png](https://github.com/user-attachments/assets/1e428457-6c49-4bad-9cf9-fbc8b787efed)
