Update 1장. 다중 통화를 지원하는 Money 객체.md

--- a/Test-Driven Development:By Example/1. 화폐 예제/1장. 다중 통화를 지원하는 Money 객체.md
+++ b/Test-Driven Development:By Example/1. 화폐 예제/1장. 다중 통화를 지원하는 Money 객체.md
@@ -15,7 +15,7 @@
 
 |기준|변환|환율|
 |--|--|--|
-|CHF|USD|1.5|
+|CHF|USD|1.5|
 
 
 <br>
@@ -56,14 +56,16 @@ class Dollor {}
 
 ##### 2. 생성자 생성
 ```java
-Dollor (int amount) {
+Dollor (int amount) {
 }
 ```
+
 ##### 3. times() 스텁 구현
 ```java
-void times (int multiplier) {
+void times (int multiplier) {
 }
 ```
+
 ##### 4. amount 필드 추가
 ```java
 int amount;
@@ -100,11 +102,9 @@ Dollor(int amount) {
   this.amount = amount;
 }
 
-void times (int multiplier) {
+void times (int multiplier) {
   amount = amount * multiplier;
 }
-
-
 ```
 
 
