Update and rename 01장. xUnit로 가는 첫걸음 to 18장. xUnit로 가는 첫걸음.md

--- a/Test-Driven Development:By Example/2. xUnit 예시 /18장. xUnit로 가는 첫걸음.md
+++ b/Test-Driven Development:By Example/2. xUnit 예시 /18장. xUnit로 가는 첫걸음.md
@@ -5,3 +5,12 @@
   - 하나의 특별한 사례에 대해서만 작동하는 코드를 가져다 다른 여러 사례에 대해서 작동할 수 있도록 상수를 변수로 바꾸어 일반화하는 것
 
 
+#### 테스트 프레임워크에 대한 할 일 목록
+- 테스트 메서드 호출
+- 먼저 setUp 호출
+- 나중에 tearDown 호출
+- 테스트 메서드가 실패하더라도 tearDown 호출
+- 여러 개의 테스트 실행
+- 수집된 결과 출력
+
+  
