Update 29장. xUnit 패턴.md

--- a/Test-Driven Development:By Example/3. 테스트 주도 개발의 패턴/29장. xUnit 패턴.md
+++ b/Test-Driven Development:By Example/3. 테스트 주도 개발의 패턴/29장. xUnit 패턴.md
@@ -1,1 +1,58 @@
-#
+### 단언 assert
+불리언 수식을 작성해서 프로그램이 자동으로 코드가 동작하는지 판단을 수행하도록 하라.  
+
+테스트를 완전히 자동화하려면 결과를 평가하는데 개입되는 인간의 판단을 모조리 끄집어내야 한다.  
+버튼을 누르면 컴퓨터가 실행하는 코드의 작동이 올바른지 검증하는 데 필요한 모든 판단이 되어야 한다는 것이다.  
+
+- 판단 결과는 불리언 값이어야 한다.
+- 이 불리언 값은 컴퓨터에 의해 검증되어야 한다.
+- 단언은 구체적이어야 한다.
+
+코드가 제대로 작동하는지를 판단하기 위한 용도로 변수를 사용하길 원한다면 언제나 설계를 향상할 수 있는 기회가 있다.  
+하지만 두려움때문에 포기하고 그냥 변수를 사용하면 기회를 잃게 된다.
+<br><br><br>
+
+
+### 픽스처
+객체들을 세팅하는 코드는 여러 테스트에 걸쳐 동일한 경우가 있다.
+인터페이스를 수동으로 변경해야할 경우, 여러 테스트를 고쳐야 한다.
+
+
+
+<br><br><br>
+
+
+
+### 외부 픽스처
+각 테스트의 목적 중 하나는 테스트가 실행되기 전과 실행된 후의 외부 세계가 동일하게 유지되도록 만드는 것이다.
+
+<br><br><br>
+
+
+### 테스트 메서드
+동일한 픽스처를 공유하는 모든 테스트는 동일한 클래스의 메서드로 작성될 것이다.
+다른 종류의 픽스처를 필요호 하는 테스트는 다른 클래스에 존재하게 된다.  
+
+관습에 의해 메서드의 이름은 test로 시작한다.  
+
+테스트 메서드는 의미가 그대로 드러나는 코드로, 읽기가 쉬워야 한다.
+
+
+<br><br><br>
+
+
+
+### 예외 테스트
+예상되는 예외를 잡아서 무시하고, 예외가 발생하지 않은 경우에 한해서 테스트가 실패하게하면 된다.  
+우리가 원하는 정확한 종류의 예외만을 잡아야 한다.  
+
+
+<br><br><br>
+
+
+### 전체 테스트
+모든 테스트 슈트에 대한 모음을 작성한다.  
+
+각각의 패키지에 대해 하나씩, 그리고 전체 애플리케이션의 패키지 테스트를 모아주는 테스트 슈트.
+
+<br><br><br>
